<resources>
    <string name="app_name">SoloPs</string>
    <string name="more_setting">More</string>
    <string name="collapse_setting">Collapse</string>
    <string name="target_app">Target</string>
    <string name="help_text"><![CDATA[Any question or suggestion, please contact <a href=\"mailto:ruikai.qrk@antgroup.com\">ruikai.qrk@antgroup.com</a>]]></string>
    <string name="app_desc">Android Automation Tools</string>
    <string name="default_scroll_percentage">50</string>
    <string name="default_long_click_time">2000</string>
    <string name="default_sleep_time">10000</string>
    <string name="to_long_template">Content too long, please view in \'%s\'</string>
    <string name="attention_input_space">Mind space</string>
    <string name="splash_app_desc">Automation Testing Tools</string>
    <string name="disclaimer">
&#160;&#160;&#160;&#160;SoloPi开源自动化测试工具的功能是我们针对不同用户的需求而特别提供。SoloPi提供的应用、代码和资料的著作权均归SoloPi所有，用户具有自由的使用权。\n
&#160;&#160;&#160;&#160;如果用户下载、安装、使用、修改本工具及相关代码，即表明用户信任该工具。那么，用户在使用本工具时造成对用户自己或他人任何形式的损失和伤害，SoloPi工具不承担任何责任。\n
&#160;&#160;&#160;&#160;本工具不含有任何旨在破坏用户计算机数据和获取用户隐私信息的恶意代码；本工具使用过程中获取到的操作信息在打印日志时默认会进行脱敏，且不会进行上传；当应用出现异常时，用户可手动选择是否通过邮件上报故障日志，不会泄漏用户隐私。\n
&#160;&#160;&#160;&#160;对于用户从非工具发布站点下载的应用，本工具无法保证其是否感染计算机病毒、是否隐藏有伪装的特洛伊木马程序或者黑客软件。用户使用此类软件，将可能导致不可预测的风险，建议用户不要轻易下载、安装、使用。本工具不承担由此产生的一切法律责任。\n
&#160;&#160;&#160;&#160;用户不得利用本工具提供的功能误导、欺骗他人；用户仅可将本工具用于学习交流，不得用于非法用途；不得故意避开或者破坏本工具为保护著作权而采取的技术措施。\n
&#160;&#160;&#160;&#160;本工具提供的功能经过详细的测试，但不能保证与所有的软硬件系统完全兼容，不能保证本工具完全没有错误。如果出现不兼容及软件错误的情况，用户可以到交流群获得技术支持。我们将尽力为用户解决问题、解答疑问。\n
&#160;&#160;&#160;&#160;使用本工具所提供的系统所产生的风险由用户自行承担。在适用法律允许的最大范围内，对因使用或不能使用本系统所产生的损害及风险，本工具不承担任何相关责任。\n
&#160;&#160;&#160;&#160;如果本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，或违反任何适用的法律条款，则该条款被视为删除，但本协议的其余条款仍有效并且具有约束力。\n
&#160;&#160;&#160;&#160;作者有权根据有关法律、法规的变化以及工具的发展需求等因素修改本协议。若新旧协议有冲突，以最新版本协议为准。如果用户继续使用本系统，则视为您接受本协议的变动。\n
&#160;&#160;&#160;&#160;本协议的一切解释权与修改权归本工具所有。\n
</string>
    <string name="replay_step_fragment__node_size_format">%d x %d</string>
    <string name="replay_list__local">Local</string>
    <string name="record_service__cost_time">%dms</string>
    <string name="qr_scan__url_not_support">%s\\nNot support</string>
    <string name="info__version_text">v%s</string>
    <string name="function_select__text">Text</string>
    <string name="function_select__description">Description</string>
    <string name="function_select__class_name">ClassName</string>
    <string name="function_select__xpath">Xpath</string>
    <string name="function_select__res_id">ResID</string>
    <string name="case_replay_result__case_name">Case Name: %s</string>
    <string name="case_replay_result__targe_app">Target App: %s</string>
    <string name="case_replay_result__start_time">Start Time: %s</string>
    <string name="case_replay_result__end_time">Finish Time: %s</string>
    <string name="case_record__connected_device">Connected: %d</string>
    <string name="case_record__no_connect_device">Scanned: %d</string>
    <string name="batch_replay_result__case_count">Total：%d</string>
    <string name="batch_replay_result__success_count">Success： %d</string>
    <string name="batch_replay_result__failed_count">Fail： %d</string>
    <string name="constant_global">Global</string>
    <string name="constant__batch_replay">Batch\nReplay</string>
    <string name="activity__case_list">Case List</string>
    <string name="constant__not_config">Unset</string>
    <string name="settings__performance_upload_url">Performance Data Upload</string>
    <string name="settings__record_upload_url">Launch Time Upload</string>
    <string name="settings__plugin_url">Plugin Url</string>
    <string name="settings__ov_password">OPPO/VIVO Password</string>
    <string name="settings__base_dir">SoloPi Data Folder</string>
    <string name="settings__case_auto_replay">One Click Replay</string>
    <string name="settings__skip_accessibility">Fast Accessibility Service</string>
    <string name="settings__display_system_app">Show System App</string>
    <string name="settings__output_charset">Performance Data Encoding</string>
    <string name="settings__encrept_key">Case Encryption Key</string>
    <string name="settings__config_failed">Fail</string>
    <string name="settings__auto_clean_time">Auto Clean</string>
    <string name="settings_auto_clean_hint">\'-1\' for never</string>
    <string name="settings__whether_hide_node_info">Hide Node Info in Logcat</string>
    <string name="constant__yes">Yes</string>
    <string name="constant__no">No</string>
    <string name="settings__load_extrenal_case">Loading external cases…</string>
    <string name="settings__load_count_case">Load %d case</string>
    <string name="settings__load_plugin">Loading plugins…</string>
    <string name="settings__load_success">Plugin \'%s\' installed</string>
    <string name="settings__load_failed">Plugin install fail</string>
    <string name="activity__setting">Setting</string>
    <string name="index__select_mail_app">Choose Mail App</string>
    <string name="index__report_error_log">Upload Error Log</string>
    <string name="index__error_occur_time">Time: %d</string>
    <string name="index__find_error_log">Find unreported error log, should report？</string>
    <string name="case_replay_result__running_result">Result: %s</string>
    <string name="patch__load_failed">Plugin \'%s\' download failed</string>
    <string name="settings__response_upload_url">Launch Time Upload</string>
    <string name="settings__for_auto_install">for install app</string>
    <string name="settings__clear_file_over_days">Clean files created N days ago</string>
    <string name="settings__replay_highlight">Highlight Node in Replay</string>
    <string name="settings__to_load_external_case">Load External Case</string>
    <string name="settings__load_patch_in_patches">Load External Plugin</string>
    <string name="settings__default_patch_path">/sdcard/solopi/patch</string>
    <string name="settings__about">About</string>
    <string name="record__test_app">Target</string>
    <string name="record__switch_app">App</string>
    <string name="record__input_case_name">Please input case name (*)</string>
    <string name="record__input_case_desc">Please input case description</string>
    <string name="record__no_local_case">No local case</string>
    <string name="record__all_cases">View All</string>
    <string name="record__recent_record">Recent</string>
    <string name="qr__camera_permission">SoloPi need permissions for QR code scan.</string>
    <string name="qr__requst_permission">Permission not granted, applying for camera permission.</string>
    <string name="setting__display_system_app">Show system app?</string>
    <string name="setting__auto_replay">Auto start replay case?</string>
    <string name="setting__skip_accessibility">Open accessibility service by ADB?</string>
    <string name="repeat__restart_before_exec">Restart app before replay</string>
    <string name="replay__save_result_to">Save replay result to \'%s\'</string>
    <string name="replay__save_failed">Save failed</string>
    <string name="replay__replay_result">Summary</string>
    <string name="replay__case_steps">Steps</string>
    <string name="replay__running_log">Log</string>
    <string name="replay__case_screenshot">Screenshot</string>
    <string name="settings__screenshot_size">Image Compare Resolution</string>
    <string name="settings__check_update">Check Updates</string>
    <string name="settings__updating_cases">Updating Cases(%d/%d)</string>
    <string name="settings__start_update_cases">Updating Cases</string>
    <string name="settings__unset">Unset</string>
    <string name="record__preparing">Preparing</string>
    <string name="record__prepare_failed">Environment preparing fail.</string>
    <string name="record__case_name_empty">Case name should not be empty.</string>
    <string name="activity__record">Record &amp; Replay</string>
    <string name="index__disclaimer">Disclaimer</string>
    <string name="replay__delete_case">Delete?</string>
    <string name="case_param_edit__case_desc">Description: %s</string>
    <string name="case_param_edit__target_app">Target: %s</string>
    <string name="settings__global_param_key_value">%s=%s</string>
    <string name="activity__index">Home</string>
    <string name="activity__replay_result">Result</string>
    <string name="activity__performance_test">Performance</string>
    <string name="activity__about">About</string>
    <string name="activity__case_edit">Edit</string>
    <string name="activity__performance_display">Performance Data</string>
    <string name="activity__performance_manage">Data Management</string>
    <string name="activity__scan">Scan</string>
    <string name="activity__download">Download</string>
    <string name="activity__batch_replay">Batch Replay</string>
    <string name="activity__batch_replay_result">Results</string>
    <string name="activity__license">License</string>
    <string name="activity__record_config">Recording Config</string>
    <string name="activity__gen_param_case">Case Param</string>
    <string name="case_replay__saving">Saving…</string>
    <string name="patch__loading_plugin_wait">Loading plugin…</string>
    <string name="performance__downloading_plugin">Downloading plugin</string>
    <string name="index__package_crash_failed">Package failed</string>
    <string name="performance__load_plugin_failed">Plugin load failed.</string>
    <string name="performance__grant_adb">Wireless ADB is required\nPlease execute "adb tcpip 5555" in terminal.</string>
    <string name="record__connect_success">connect to "%s"</string>
    <string name="image_compare__assert_failed">Image Search Failed</string>
    <string name="image_compare__assert_success">Image Search Success</string>
    <string name="codec_config__unsupport_size">Codec \'%s\' do not support %dx%d</string>
    <string name="codec_config__unsupport_size_framerate">Codec \'%s\' do not support %dx%d@%d</string>
    <string name="codec_config__unsupport_bitrate">Codec \'%s\' do not support bitrate %d</string>
    <string name="codec_config__unsupport_framerate">Codec \'%s\' do not support fps %d</string>
    <string name="batch__select_case">Select Case</string>
    <string name="case__update_success">Update Success</string>
    <string name="performance__not_support_for_android_l">Device using Android 4.X is not supported</string>
    <string name="codec__video_config_unsupport">Config not support</string>
    <string name="case_edit__case_param">Params:</string>
    <string name="case_edit__case_desc">Desc:</string>
    <string name="case_edit__case_name">Name:</string>
    <string name="record_config__title">Recording Config(H.264 AVC)</string>
    <string name="record_config__codec">Codec</string>
    <string name="record_config__resolution">Resolution</string>
    <string name="record_config__bitrate">Bitrate(kbps)</string>
    <string name="record_config__framerate">Frame Rate(fps)</string>
    <string name="record_config__expect_diff">Diff Threshold(%)</string>
    <string name="record_config__start">Start</string>
    <string name="node_item__class">Type</string>
    <string name="node_item__id">ID</string>
    <string name="node_item__text">Text</string>
    <string name="node_item__desc">Description</string>
    <string name="node_item__xpath">Xpath</string>
    <string name="node_item__size">Size</string>
    <string name="node_item__depth">Depth</string>
    <string name="record_config__report_title">Report Title</string>
    <string name="action_let_cur_value_null">Current: -</string>
    <string name="let_global__node_text_pattern">use type ${node.text}, \'+\' and \'*\' are usable</string>
    <string name="let_global__calc_type">Calculation Type</string>
    <string name="let_global__integer">Integer</string>
    <string name="let_global__string">String</string>
    <string name="let_global__variable_name">Variable Name</string>
</resources>