<!--
  ~ Copyright (C) 2015-present, Ant Financial Services Group
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/control_dp24"
        android:paddingRight="@dimen/control_dp24">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/control_dp12"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_80"
                android:layout_height="wrap_content"
                android:text="@string/case_edit__case_name"
                android:textColor="#000000"
                android:textSize="@dimen/textsize_16" />

            <EditText
                android:id="@+id/case_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_custom_input"
                android:hint="@string/record__input_case_name"
                android:padding="@dimen/control_dp6"
                android:textColorHint="#aaaaaa"
                android:textSize="@dimen/textsize_16" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/control_dp16"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_80"
                android:layout_height="wrap_content"
                android:text="@string/case_edit__case_desc"
                android:textColor="#000000"
                android:textSize="@dimen/textsize_16" />

            <EditText
                android:id="@+id/case_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_custom_input"
                android:hint="@string/record__input_case_desc"
                android:padding="@dimen/control_dp6"
                android:textColorHint="#aaaaaa"
                android:textSize="@dimen/textsize_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/control_dp16"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_edit__case_param"
                android:textColor="#000000"
                android:textSize="@dimen/textsize_16" />

            <com.alipay.hulu.ui.TotalMeasureListView
                android:id="@+id/case_params"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/control_dp4"
                android:divider="@null"
                tools:listitem="@layout/item_case_param" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>