<!--
  ~ Copyright (C) 2015-present, Ant Financial Services Group
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_400">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:divider="@drawable/divider"
        android:showDividers="middle|beginning|end">

        <TableRow android:padding="@dimen/control_dp2">

            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:minWidth="@dimen/dp_56"
                android:text="@string/node_item__class"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/textsize_14" />

            <TextView
                android:id="@+id/text_node_classname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/textsize_13" />

        </TableRow>

        <TableRow android:padding="@dimen/control_dp2">

            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:minWidth="@dimen/dp_56"
                android:text="@string/node_item__id"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/textsize_14" />

            <TextView
                android:id="@+id/text_node_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/textsize_13" />

        </TableRow>

        <TableRow android:padding="@dimen/control_dp2">

            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:minWidth="@dimen/dp_56"
                android:text="@string/node_item__text"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/textsize_14" />

            <TextView
                android:id="@+id/text_node_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/textsize_13" />

        </TableRow>

        <TableRow android:padding="@dimen/control_dp2">

            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:minWidth="@dimen/dp_56"
                android:text="@string/node_item__desc"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/textsize_14" />

            <TextView
                android:id="@+id/text_node_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/textsize_13" />

        </TableRow>

        <TableRow android:padding="@dimen/control_dp2">

            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:minWidth="@dimen/dp_56"
                android:text="@string/node_item__xpath"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/textsize_14" />

            <TextView
                android:id="@+id/text_node_xpath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/textsize_13" />

        </TableRow>

        <TableRow android:padding="@dimen/control_dp2">

            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:minWidth="@dimen/dp_56"
                android:text="@string/node_item__size"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/textsize_14" />

            <TextView
                android:id="@+id/text_node_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/textsize_13" />

        </TableRow>

        <TableRow android:padding="@dimen/control_dp2">

            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:minWidth="@dimen/dp_56"
                android:text="@string/node_item__depth"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/textsize_14" />

            <TextView
                android:id="@+id/text_node_depth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/textsize_13" />

        </TableRow>

    </TableLayout>

</ScrollView>